<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>tech.kayys.wayang</groupId>
        <artifactId>wayang-agentic-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>agent-backend-gollek</artifactId>
    <name>Agent Backend Gollek Adapter</name>
    <description>
        Backend adapter that wraps Gollek SDK to implement the backend-agnostic
        InferenceBackend SPI. Pure Java implementation with no Quarkus runtime.
    </description>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- Backend-agnostic SPI -->
        <dependency>
            <groupId>tech.kayys.wayang</groupId>
            <artifactId>agent-spi</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Gollek SDK (the backend we're adapting to) -->
        <dependency>
            <groupId>tech.kayys.wayang</groupId>
            <artifactId>gollek-sdk</artifactId>
            <version>0.1.0</version>
      <scope>provided</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>3.5.3.Final</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
